--- a/Exercise5/css/style.css
+++ b/Exercise5/css/style.css
@@ -867,12 +867,59 @@ select {
 /* !!!!!!!!!!!!!!!!!! ΤΕΛΟΣ ABOUT US !!!!!!!!!!!!!!!! */
 
 /* !!!!!!!!!!!!!!!!!!!! SIGN - UP !!!!!!!!!!!!!!!!!! */
-.input {
+#form {
+    padding: 30px 40px;
 }
 
-.inputTitle {}
+.formControl {
+    margin-bottom: 10px;
+    padding-bottom: 20px;
+    position: relative;
+}
 
-#checks {}
+.formControl label {
+    display: inline-block;
+    margin-bottom: 5px;
+}
+
+.formControl input {
+    border: 2px solid #f0f0f0;
+    border-radius: 4px;
+    display: block;
+    font-size: 14px;
+}
+
+.formControl.success input {
+    border-color: #2ecc71;
+}
+
+.formControl.error input {
+    border-color: #e74c3c;
+}
+
+.formControl small {
+    visibility: hidden;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.formControl.error small {
+    visibility: visible;
+}
+
+.form button {
+    background-color: #fff;
+    border: 2px solid #8e448e;
+    border-radius: 4px;
+    color: #fff;
+    display: block;
+    font-size: 16px;
+    padding: 10px;
+    width: 100%;
+}
+
+
 
 /* !!!!!!!! FOOTER !!!!!!!!!! */
 .footer-content {
