--- a/Exercise5/css/style.css
+++ b/Exercise5/css/style.css
@@ -868,57 +868,22 @@ select {
 
 /* !!!!!!!!!!!!!!!!!!!! SIGN - UP !!!!!!!!!!!!!!!!!! */
 #form {
-    padding: 30px 40px;
-}
-
-.formControl {
-    margin-bottom: 10px;
-    padding-bottom: 20px;
-    position: relative;
-}
-
-.formControl label {
-    display: inline-block;
-    margin-bottom: 5px;
-}
-
-.formControl input {
-    border: 2px solid #f0f0f0;
+    width: 300px;
+    padding: 20px;
+    background-color: whitesmoke;
     border-radius: 4px;
-    display: block;
-    font-size: 14px;
+    font-size: 12px;
 }
 
-.formControl.success input {
-    border-color: #2ecc71;
-}
-
-.formControl.error input {
-    border-color: #e74c3c;
-}
-
-.formControl small {
-    visibility: hidden;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-}
-
-.formControl.error small {
-    visibility: visible;
-}
-
-.form button {
-    background-color: #fff;
-    border: 2px solid #8e448e;
-    border-radius: 4px;
-    color: #fff;
-    display: block;
-    font-size: 16px;
+#form button {
     padding: 10px;
+    margin-top: 10px;
     width: 100%;
+    color: white;
+    background-color: blue;
+    border: none;
+    border-radius: 4px;
 }
-
 
 
 /* !!!!!!!! FOOTER !!!!!!!!!! */
