--- a/Exercise4/css/style.css
+++ b/Exercise4/css/style.css
@@ -955,9 +955,10 @@ select {
     border: 4px solid #6ab1d4;
     box-shadow: 0px 2px 16px #6ab1d4;
     margin-bottom: 30px;
-    margin-left: 20px;  
-    margin-right: 20px;
+    margin-left: 45px;  
+    margin-right: 45px;
     text-align: left;
+    
 }
 
 .perilhpsh > p {
@@ -1045,7 +1046,14 @@ select {
 /* !!!!!!!!!!!! RESPONSIVE  DESIGN / MEDIA QUERIES !!!!!!!!!!!!!! */
 
 
+@media only screen and (max-width: 1100px) {
 
+
+    .analytika-xarakthristika {
+
+        font-size: 16px;
+    }
+}
 
 @media only screen and (max-width: 1024px) {
 
@@ -1053,6 +1061,15 @@ select {
     .analytika-xarakthristika {
 
         font-size: 16px;
+    }
+}
+
+@media only screen and (max-width: 1000px) {
+
+
+    .analytika-xarakthristika {
+
+        font-size: 1.5vw;
     }
 }
 
