--- a/Exercise5/css/style.css
+++ b/Exercise5/css/style.css
@@ -178,15 +178,21 @@ body {
 /* !!!!!!!!!!!!!!!!!!!!! ΤΕΛΟΣ INDEX !!!!!!!!!!!!!!!!!!! */
 
 /* !!!!!!!!!!!!!!!!!!!! PRODUCT-CATEGORIES !!!!!!!!!!!!!!!!!! */
+
+.main-content > h1 {
+
+    font-size: 1.7em;
+
+}
+
 .subcategory {
-    border: 2px solid #6ab1d4;
-    box-shadow: 0px 2px 16px #6ab1d4;
-    /* βαλαμε border γυρω απο το section αυτο , μαζι με σκια γυρω γυρω και παιξαμε με τα margin για να φαινεται ωραιο μικρο και κεντραρισμενο */
+    border: 2px solid #6ab1d4;           
+    box-shadow: 0px 2px 16px #6ab1d4; /* βαλαμε border γυρω απο το section αυτο , μαζι με σκια γυρω γυρω και παιξαμε με τα margin για να φαινεται ωραιο μικρο και κεντραρισμενο */
     max-width: 100%;
     margin-top: 20px;
     margin-bottom: 30px;
-    margin-left: 170px;
-    margin-right: 170px;
+    margin-left: 270px;
+    margin-right: 270px;
 }
 
 .subcategory>ul {
@@ -854,8 +860,8 @@ select {
     border: 4px solid #6ab1d4;
     box-shadow: 0px 2px 16px #6ab1d4;
     margin-bottom: 30px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 45px;
+    margin-right: 45px;
     text-align: left;
 }
 
@@ -988,10 +994,32 @@ select {
 
 /* !!!!!!!!!!!!! TΕΛΟΣ FOOTER !!!!!!!!!!!! */
 
-/* !!!!!!!!!!!! RESPONSIVE  DESIGN / MEDIA QUERIES !!!!!!!!!!!!!! */
+/* !!!!!!!!!!!! RESPONSIVE  DESIGN / MEDIA QUERIES !!!!!!!!!!!!!!*/
+
+@media only screen and (max-width: 1100px) {
+
+
+    .analytika-xarakthristika {
+
+        font-size: 16px;
+    }
+}
+
+
+
 @media only screen and (max-width: 1024px) {
     .analytika-xarakthristika {
         font-size: 16px;
+    }
+}
+
+
+@media only screen and (max-width: 1000px) {
+
+
+    .analytika-xarakthristika {
+
+        font-size: 1.5vw;
     }
 }
 
@@ -1153,6 +1181,12 @@ select {
         grid-template-rows: 0.2fr 2fr 0.2fr;
     }
 
+
+    .header-light-color {
+
+        margin-top: -10px;
+    }
+
     .navigation a {
         font-size: 14px;
         /* αλλαγη στο χρωμα του font και βγαλαμε το underline απο τα link ωστε να φαινεται πιο ωραιο ,  τα καναμε bold */
@@ -1160,7 +1194,7 @@ select {
     }
 
     .welcome {
-        font-size: 18px;
+        font-size: 1.5em;
     }
 
     .main-content>p {
@@ -1229,6 +1263,21 @@ select {
         padding-top: 15px;
         padding-right: 50px;
     }
+
+
+    .subcategory> ul > li > a > img {
+
+        max-width: 65%;
+       
+     
+     }
+    .popular-products> ul > li > a > img {
+    
+        max-width: 65%;
+        
+     
+     }
+
 
 
     .products .product-card {
@@ -1387,22 +1436,7 @@ select {
     }
 }
 
-@media only screen and (max-width: 575px) {
-    .section-promote {
-        min-width: 30%;
-    }
 
-    .product>a>img {
-        height: fit-content;
-        width: fit-content;
-    }
-
-    .image {
-        /* isws thelei kai max height ??? */
-        max-height: 100%;
-        max-width: 95%;
-    }
-}
 
 @media only screen and (max-width: 444px) {
     .navigation {
@@ -1411,5 +1445,27 @@ select {
         justify-content: center;
     }
 }
+
+@media only screen and (max-width: 400px){
+
+    .section-promote{
+
+       
+        min-width: 30%;
+    }
+
+    .product > a > img{
+
+        height: fit-content;
+        width: fit-content;
+    }
+    .image {
+
+        /* isws thelei kai max height ??? */
+        max-height: 100%;
+        max-width: 95%;
+     }
+ }
+
 
 /* !!!!!!!! RESPONSIVE IMAGES !!!!!!!!!!! */
