--- a/Exercise2/css/style.css
+++ b/Exercise2/css/style.css
@@ -114,10 +114,14 @@ body {
     margin-bottom: 30px;
     margin-left: 270px;
     margin-right: 270px;
+    
 }
+
+
 
 .category-card {
     display: inline-block;              /* inline-block για να ειναι στην σειρα τα προϊοντα */
+   
 }
 
 
@@ -358,21 +362,22 @@ a:active {
 
     padding-top: 30px;
 }
-#iphone-code {
-    font-size: 15px;
-    margin-bottom: -47px;
-    margin-right: 1153px;
-    padding-bottom: 40px;
-    padding-left: 10px;
-    padding-top: 5px;
-    border: 5px hidden #2ea8d9;
+
+
+
+#iphone-price {
+    border: 3px hidden #2ea8d9;
     background-color: #6ab1d4;
     border-radius: 25px;
-    border-top-style: solid;
-    text-align: center;
 }
 
 
+.iphone-code-price{
+
+    display: block;
+    float: left;
+    max-width: 100%;
+}
 
 .display-photo {
     float: left;
@@ -381,25 +386,12 @@ a:active {
     border-radius: 25px;
 }
 
-#iphone {
-    text-align: center;
-    border: 5px hidden #2ea8d9;
-    background-color: #6ab1d4;
-    border-radius: 25px;
-    border-bottom-style: solid;
-    padding-top: 20px;
-    margin-right: 1153px;
-    margin-top: -230px;
-    margin-bottom: 200px;
-    font-size: 25px;
-    font-weight: bold;
-}
+
 
 .product-descr {
     text-align: left;
     border: 3px solid #6ab1d4;
     box-shadow: 0px 2px 16px #6ab1d4;
-    margin-top: -100px;
     margin-bottom: 30px;
     margin-left: 370px;
     margin-right: 30px;
@@ -543,25 +535,22 @@ label {
 }
 
 .vathmologia-asteria textarea {
-    display: block;
-    width: 595px;
-    height: 50px;
+    width: 40%;
+    height: 80px;
     padding: 12px 20px;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
     background-color: #f8f8f8;
     resize: none;
-    margin-top: 10px;
-    margin-left: 450px;
 }
 
 input[type=submit] {
-    width: 650px;
+    width: 45%;
     background-color: #2ea8d9;
     color: white;
-    padding: 12px 20px;
-    margin-left: -10px;
+    padding: 14px 20px;
+    margin: 8px 0;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -578,32 +567,27 @@ input[type=submit]:hover {
 
 /* !!!!!!!!!!!!!!!!!! STORES !!!!!!!!!!!!!!!!!!!! */
 
-.katasthma {
-    border: 3px solid #6ab1d4;
-    box-shadow: 0px 2px 16px #6ab1d4;
-    margin-top: 20px;
-    margin-bottom: 30px;
-    margin-left: 350px;
-    margin-right: 350px;
-    overflow: auto;
+.katasthmata {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    
 }
 
-.katasthma>h3 {
+iframe{
+
+    width: 70%;
+    height: 500px;
+}
+
+.katasthmata>h3 {
     text-decoration: underline;
-    padding-left: 15px;
-    margin-top: -1px;
-    text-align: left;
-}
-
-.katasthma>p {
-    font-weight: bold;
-    padding-left: 50px;
-    padding-top: 70px;
-}
-
-.katasthma>p>img {
-    float: right;
-    margin-top: -120px;
+   
+   
 }
 
 
